59759 remove dsplay simulated move in accounting report